--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ html, body {
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background: #fbfbfb;
+    background-color: white;
 }
 
 a {
