--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -297,3 +297,18 @@ input[type=checkbox]:checked {
     color: black;
     font-size: 20px;
 }
+.reservation-table td {
+    width: 100%;
+    border: 1px solid #dce0e0;
+    padding: 10px;
+}
+.wide {
+    width: 100%;
+}
+.price_tag {
+  background-color: #606567;
+  color: #fff;
+  font-size: 20px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
