--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -1,11 +1,17 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css);
+
 html, body {
-    background: #252C33;
+    background: #e5e5e5;
     font-family: 'Lato', sans-serif;
     margin: 0px auto;
 }
 ::selection{
   background: rgba(82,179,217,0.3);
   color: inherit;
+}
+a{
+  color: rgba(82,179,217,0.9);
 }
 
 /* M E N U */
@@ -17,7 +23,7 @@ html, body {
     right: 0px;
     width: 100%;
     height: 50px;
-    background: rgba(27,35,42,0.9);
+    background: rgba(82,179,217,0.9);
     z-index: 100;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -31,12 +37,11 @@ html, body {
     height: 50px;
     top: 0px;
     left: 0px;
-    color: rgba(255,255,255,0.5);
-    line-height: 45px;
-    font-size: 40px;
+    color: #fff;
+    line-height: 50px;
+    font-size: 30px;
     padding-left: 10px;
     cursor: pointer;
-    transition: .15s all;
 }
 .back img {
     position: absolute;
@@ -44,7 +49,7 @@ html, body {
     left: 30px;
     width: 40px;
     height: 40px;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255,255,255,0.98);
     border-radius: 100%;
     -webkit-border-radius: 100%;
     -moz-border-radius: 100%;
@@ -52,9 +57,9 @@ html, body {
     margin-left: 15px;
     }
 .back:active {
-    background: rgba(0,0,0,0.15);
+    background: rgba(255,255,255,0.2);
 }
-.name {
+.name{
     position: absolute;
     top: 3px;
     left: 110px;
@@ -64,7 +69,7 @@ html, body {
     color: rgba(255,255,255,0.98);
     cursor: default;
 }
-.last {
+.last{
     position: absolute;
     top: 30px;
     left: 115px;
@@ -73,17 +78,6 @@ html, body {
     font-weight: 400;
     color: rgba(255,255,255,0.6);
     cursor: default;
-}
-.members {
-    position: absolute;
-    top: 30px;
-    left: 115px;
-    font-family: 'Lato';
-    font-size: 11px;
-    font-weight: 400;
-    color: rgba(255,255,255,0.6);
-    cursor: default;
-    word-spacing: 2px;
 }
 
 /* M E S S A G E S */
@@ -94,21 +88,46 @@ html, body {
     margin: 0;
     padding: 0 0 50px 0;
     margin-top: 60px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 .chat li {
     padding: 0.5rem;
     overflow: hidden;
     display: flex;
 }
+.chat .avatar {
+    width: 40px;
+    height: 40px;
+    position: relative;
+    display: block;
+    z-index: 2;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    background-color: rgba(255,255,255,0.9);
+}
+.chat .avatar img {
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    background-color: rgba(255,255,255,0.9);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+}
 .chat .day {
     position: relative;
     display: block;
     text-align: center;
-    color: rgba(255,255,255,0.3);
+    color: #c0c0c0;
     height: 20px;
-    text-shadow: 7px 0px 0px #252C33, 6px 0px 0px #252C33, 5px 0px 0px #252C33, 4px 0px 0px #252C33, 3px 0px 0px #252C33, 2px 0px 0px #252C33, 1px 0px 0px #252C33, 1px 0px 0px #252C33, 0px 0px 0px #252C33, -1px 0px 0px #252C33, -2px 0px 0px #252C33, -3px 0px 0px #252C33, -4px 0px 0px #252C33, -5px 0px 0px #252C33, -6px 0px 0px #252C33, -7px 0px 0px #252C33;
-    box-shadow: inset 20px 0px 0px #252C33, inset -20px 0px 0px #252C33, inset 0px -2px 0px rgba(255,255,255,0.1);
+    text-shadow: 7px 0px 0px #e5e5e5, 6px 0px 0px #e5e5e5, 5px 0px 0px #e5e5e5, 4px 0px 0px #e5e5e5, 3px 0px 0px #e5e5e5, 2px 0px 0px #e5e5e5, 1px 0px 0px #e5e5e5, 1px 0px 0px #e5e5e5, 0px 0px 0px #e5e5e5, -1px 0px 0px #e5e5e5, -2px 0px 0px #e5e5e5, -3px 0px 0px #e5e5e5, -4px 0px 0px #e5e5e5, -5px 0px 0px #e5e5e5, -6px 0px 0px #e5e5e5, -7px 0px 0px #e5e5e5;
+    box-shadow: inset 20px 0px 0px #e5e5e5, inset -20px 0px 0px #e5e5e5, inset 0px -2px 0px #d7d7d7;
     line-height: 38px;
     margin-top: 5px;
     margin-bottom: 20px;
@@ -118,59 +137,21 @@ html, body {
     -moz-user-select: none;
     -ms-user-select: none;
 }
-.chat .notification {
-    position: relative;
-    display: inherit;
-    text-align: center;
-    font-size: 13px;
-    color: rgba(255,255,255,0.15);
-    background: rgba(234, 247, 255, 0.035);
-    line-height: 30px;
-    border-radius: 100px;
-    margin: 7px 35%;
-    height: 30px;
-    width: 30%;
-    box-shadow: 0px 1px 0px rgba(0,0,0,.05), 0px -1px 0px rgba(0,0,0,.05), inset 0px 1px 0px rgba(255,255,255,.02), inset 0px -1px 0px rgba(255,255,255,.02);
-    text-shadow: 0px -1px 0px rgba(0,0,0,.1), 0px 1px 0px rgba(255,255,255,.05);
-    cursor: default;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    transition: all .2s cubic-bezier(0.565, -0.260, 0.255, 1.410);
-}
-.chat .notification time {
-    position: absolute;
-    top: 7px;
-    right: 7px;
-    font-size: 11px;
-    padding: 8px;
-    border-radius: 100px;
-    background: #252C33;
-    box-shadow: 0px 0px 2px rgba(255,255,255,.02), inset 0px 0px 1px rgba(27,35,42,0.1);
-    height: 1px;
-    line-height: 0px;
-    color: rgba(255,255,255,0.1);
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    transition: all .2s cubic-bezier(0.565, -0.260, 0.255, 1.410);
-}
 
 .other .msg {
+    order: 1;
     border-top-left-radius: 0px;
-    box-shadow: -1px 2px 0px #c1cbcd;
+    box-shadow: -1px 2px 0px #D4D4D4;
 }
 .other:before {
     content: "";
     position: relative;
     top: 0px;
     right: 0px;
-    left: 0px;
+    left: 40px;
     width: 0px;
     height: 0px;
-    border: 5px solid #eef8ff;
+    border: 5px solid #fff;
     border-left-color: transparent;
     border-bottom-color: transparent;
 }
@@ -180,78 +161,66 @@ html, body {
     align-items: flex-end;
 }
 .self .msg {
+    order: 1;
     border-bottom-right-radius: 0px;
-    box-shadow: 1px 2px 0px #c1cbcd;
+    box-shadow: 1px 2px 0px #D4D4D4;
 }
-.self:after {
+.self .avatar {
+    order: 2;
+}
+.self .avatar:after {
     content: "";
     position: relative;
     display: inline-block;
-    float: right;
-    bottom: 0px;
+    bottom: 19px;
     right: 0px;
     width: 0px;
     height: 0px;
-    border: 5px solid #eef8ff;
+    border: 5px solid #fff;
     border-right-color: transparent;
     border-top-color: transparent;
-    box-shadow: 0px 2px 0px #c1cbcd;
+    box-shadow: 0px 2px 0px #D4D4D4;
 }
 
 .msg {
-    background: #eef8ff;
+    background: white;
     min-width: 50px;
     padding: 10px;
     border-radius: 2px;
-    word-break: break-all;
-}
-.msg .user {
-    font-size: 14px;
-    margin: 0 0 2px 0;
-    color: #666;
-    font-weight: 700;
-    margin-top: -2px;
-    margin-bottom: 5px;
-    transition: all .2s ease;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-}
-.msg .user .range.admin {
-    display: inline-block;
-    font-size: 10px;
-    font-weight: 300;
-    color: #6aea96;
-    padding: 2px;
-    border-radius: 3px;
-    border: solid 1px #6aea96;
-    background: rgba(255,255,255,0);
-    margin-left: 5px;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
 }
 .msg p {
-    font-size: 13px;
-    margin: 0 0 2px 0;
+    font-size: 0.8rem;
+    margin: 0 0 0.2rem 0;
     color: #777;
-    transition: all .2s ease;
 }
 .msg img {
     position: relative;
     display: block;
-    width: 600px;
+    width: 450px;
     border-radius: 5px;
     box-shadow: 0px 0px 3px #eee;
-    transition: all .8s cubic-bezier(0.565, -0.260, 0.255, 1.410);
+    transition: all .4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
     cursor: default;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
 }
+@media screen and (max-width: 800px) {
+    .msg img {
+    width: 300px;
+}
+}
+@media screen and (max-width: 550px) {
+    .msg img {
+    width: 200px;
+}
+}
 
 .msg time {
     font-size: 0.7rem;
-    color: rgba(0,0,0,.35);
+    color: #ccc;
     margin-top: 3px;
     float: right;
     cursor: default;
@@ -275,9 +244,8 @@ emoji{
     background-size: cover;
     background-repeat: no-repeat;
     margin-top: -7px;
-    margin-left: 2px;
     margin-right: 2px;
-    transform: translate3d(0px, 4px, 0px);
+    transform: translate3d(0px, 3px, 0px);
 }
 emoji.please{background-image: url(https://imgur.com/ftowh0s.png);}
 emoji.lmao{background-image: url(https://i.imgur.com/MllSy5N.png);}
@@ -290,7 +258,6 @@ emoji.suffocated{background-image: url(https://i.imgur.com/jfTyB5F.png);}
 emoji.scream{background-image: url(https://i.imgur.com/tOLNJgg.png);}
 emoji.hearth_blue{background-image: url(https://i.imgur.com/gR9juts.png);}
 emoji.funny{background-image: url(https://i.imgur.com/qKia58V.png);}
-emoji.shit{background-image: url(https://i.imgur.com/H5Jba8r.png);}
 
 @-webikt-keyframes pulse {
   from { opacity: 0; }
@@ -304,23 +271,26 @@ emoji.shit{background-image: url(https://i.imgur.com/H5Jba8r.png);}
     min-height: 12px;
     height: 12px;
     max-height: 12px;
-    background: #252C33;
-    box-shadow: inset 0px 50px 0px rgba(27,35,42,0.9), inset 0px -50px 0px #eee;
+    background: #e5e5e5;
+    box-shadow: inset 0px 50px 0px rgba(82,179,217,0.9), inset 0px -52px 0px #fafafa;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(255,255,255,0.2);
+    background: #bbb;
     border: none;
     border-radius: 100px;
-    border: solid 3px #252C33;
+    border: solid 3px #e5e5e5;
+    box-shadow: inset 0px 0px 3px #999;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: rgba(255,255,255,0.1);
+    background: #b0b0b0;
+  box-shadow: inset 0px 0px 3px #888;
 }
 
 ::-webkit-scrollbar-thumb:active {
-    background: rgba(255,255,255,0.1);
+    background: #aaa;
+  box-shadow: inset 0px 0px 3px #7f7f7f;
 }
 
 ::-webkit-scrollbar-button {
@@ -329,7 +299,8 @@ emoji.shit{background-image: url(https://i.imgur.com/H5Jba8r.png);}
 }
 
 /* T Y P E */
-.typezone{
+
+input.textarea {
     position: fixed;
     bottom: 0px;
     left: 0px;
@@ -337,145 +308,27 @@ emoji.shit{background-image: url(https://i.imgur.com/H5Jba8r.png);}
     width: 100%;
     height: 50px;
     z-index: 99;
-    background: #eee;
-    border: none;
-    outline: none;
-}
-textarea, textarea:hover {
-    position: absolute;
-    bottom: 0px;
-    left: 8%;
-    right: 8%;
-    width: 80%;
-    height: 30px;
-    z-index: 100;
     background: #fafafa;
     border: none;
     outline: none;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 2%;
+    padding-left: 55px;
+    padding-right: 55px;
     color: #666;
     font-weight: 400;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    overflow: hidden;
-    resize: none;
-    z-index: 200;
-    box-shadow: 0px 0px 10px rgba(0,0,0,0.2);
-    transition: all .4s cubic-bezier(0.565, -0.260, 0.255, 1.410);
-}
-textarea:focus {
-    height: 300px;
-    box-shadow: 0px 0px 20px rgba(0,0,0,0.3);
 }
 .emojis {
     position: fixed;
     display: block;
-    bottom: 0px;
-    left: 0px;
-    width: 8%;
-    height: 50px;
-    background-image: url(https://i.imgur.com/VAn5Geq.png);
+    bottom: 8px;
+    left: 7px;
+    width: 34px;
+    height: 34px;
+    background-image: url(https://i.imgur.com/5WUpcPZ.png);
     background-repeat: no-repeat;
-    background-size: 34px 34px;
-    background-position: 45% 9px;
+    background-size: cover;
     z-index: 100;
     cursor: pointer;
 }
 .emojis:active {
     opacity: 0.9;
-}
-.send {
-    position: fixed;
-    display: block;
-    bottom: 0px;
-    right: 0px;
-    width: 8%;
-    height: 50px;
-    border: none;
-    outline: none;
-    z-index: 100;
-    cursor: pointer;
-    background-image: url(https://i.imgur.com/VSQxJKL.png);
-    background-repeat: no-repeat;
-    background-size: 34px 34px;
-    background-position: 45% 9px;
-    background-color: rgba(255,255,255,0);
-}
-.send:active {
-    opacity: 0.85;
-}
-
-/* R E S P O N S I V E   C O N F I G U R A T I O N */
-
-@media screen and (max-width: 750px) {
-    ::-webkit-scrollbar {
-    display: none;
-    }
-    .chat{
-        margin-bottom: 55px;
-    }
-    .msg p {
-        font-size: 11px;
-    }
-    .msg .user {
-        font-size: 13px;
-    }
-    .msg img {
-        width: 300px;
-    }
-    .chat .notification {
-        font-size: 12px;
-        margin: 7px 30%;
-        width: 40%;
-    }
-    .chat .day {
-        font-size: 11px;
-    }
-    .emojis {
-        width: 25%;
-    }
-    .send {
-        width: 25%;
-    }
-    textarea {
-        left: 0px;
-        right: 0px;
-        bottom: 50px;
-        padding-left: 5%;
-        padding-right: 5%;
-        padding-top: 20px;
-        width: 90%;
-        border-radius: 0px;
-        height: 28px;
-        background: #fafafa;
-        box-shadow: none;
-        transition: all .4s cubic-bezier(0.2, -0.2, 0.2, 1.2);
-    }
-    textarea:focus {
-        height: 30vh;
-        margin-top: 30vh;
-        box-shadow: 0px -20px 20px rgba(0,0,0,0.1);
-    }
-    form:focus ~ .typezone {
-        bottom: 50vh;
-    }
-}
-@media screen and (max-width: 550px) {
-    .msg p {
-        max-width: 250px;
-    }
-    .msg img {
-        width: 200px;
-    }
-    .chat .notification {
-        font-size: 12px;
-        margin: 7px 0px;
-        width: 100%;
-        border-radius: 0px;
-    }
-    .chat .notification time {
-        right: 10px;
-    }
 }
