--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -383,3 +383,21 @@ input[type=checkbox]:checked {
   font-weight: 600;
   color: #00A699;
 }
+
+.discovery-card {
+  background-size: cover;
+  background-position: center;
+  height: 326px;
+}
+
+.va-container {
+  display: table;
+  width: 100%;
+  height: 100%;
+}
+
+.va-middle {
+  color: #fff !important;
+  vertical-align: middle;
+  display: table-cell;
+}
